Spacing of each section fixed

--- a/style.css
+++ b/style.css
@@ -103,13 +103,16 @@ p {
 
 .stop {
   position: relative;
+  max-width: 100%;
+  max-height: 40%;
 }
 
 .stop img {
-  width: 100%;
+  max-height: 80%;
+  max-width: 100%;
+  object-fit: fill;
   filter: brightness(50%);
 }
-
 .stop .row {
   position: absolute;
   top: 40%;
@@ -134,12 +137,11 @@ p {
 }
 
 .heart {
-  font-size: 50px;
   color: #dd4b39;
 }
 
 .friends img {
-  width: 80px;
+  width: 50px;
 }
 
 .friends {
@@ -147,7 +149,7 @@ p {
 }
 
 .friends h1 {
-  font-size: 70px;
+  font-size: 35px;
 }
 /* Fifth section ends */
 
